# StaREngine

./: .gitignore  .gitlab-ci.yml  .ort.yml  LICENSE  README.md  REUSE.toml  THIRD_PARTY_LICENSES.md  geojson_to_gml.py  gml_to_geojson.py  pyproject.toml  requirements.txt
.reuse/: dep5
controles/recostar/controles_alti/: controle_3d.py  controle_alti_ign.py  controle_alti_sommets.py  controle_z_null.py  pipeline_controle_alti.py  rapport_pdf_alti.py  test_controle_3d.py  test_controle_alti_ign.py  test_controle_alti_sommets.py  test_controle_z_null.py  test_pipeline_controle_alti.py  test_rapport_pdf_alti.py
controles/recostar/controles_gml/: controle_unicite_id.py  controle_valeur_xsd.py  pipeline_controle_gml.py  rapport_pdf_gml.py  test_controle_unicite_id.py  test_controle_valeur_xsd.py  test_pipeline_controle_gml.py  test_rapport_pdf_gml.py
controles/recostar/controles_noeuds/: controle_coherence_terre.py  controle_domaine_tension.py  controle_extremites.py  controle_geometrie.py  pipeline_controle_noeud.py  rapport_pdf_noeud.py  test_controle_coherence_terre.py  test_controle_domaine_tension.py  test_controle_extremites.py  test_controle_geometrie.py  test_pipeline_controle_noeud.py  test_rapport_pdf_noeud.py
controles/recostar/controles_plor/: controle_cheminement_superpose.py  controle_plor_cable.py  controle_plor_doublons.py  pipeline_controle_plor.py  rapport_pdf_plor.py  (+5 more)
pipelines/recostar/: pipeline_recostar_complet_v1.py  pipeline_recostar_complet_v1_1.py
pipelines/starapd/: README.md
referentiels/recostar/: recostar_referentiels_V1_1.json
(+64 files in other folders)
